# aperosengine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  CNAME  Dockerfile  LICENSE  README.md  aperosengine.conf.example  aperosvoxel.conf.example
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
android/: SDL_Java_RMB_fix.patch  build.gradle  settings.gradle
builtin/: init.lua  settingtypes.txt
irr/: README.md
lib/sha256/: CMakeLists.txt  LICENSE  LICENSE.md  cmake_config.h.in  my_sha256.h  sha256.c  test_sha256.c
misc/: AppImageBuilder.yml  Info.plist  aperosengine.exe.manifest  aperosvoxel.exe.manifest  make_redirects.sh  net.aperosengine.aperosengine.desktop  net.aperosengine.aperosengine.metainfo.xml  net.minetest.minetest.metainfo.xml  redirect.html  winresource.rc
mods/: mods_here.txt
po/: aperosengine.pot
src/: CMakeLists.txt  activeobject.h  activeobjectmgr.h  catch.cpp  catch.h  chat.cpp  chat.h  chat_interface.h  chatmessage.h  clientdynamicinfo.cpp  clientdynamicinfo.h  collision.cpp  collision.h  config.h  constants.h  content_mapnode.cpp  content_nodemeta.cpp  convert_json.cpp  craftdef.cpp  craftdef.h  daynightratio.h  debug.cpp  debug.h  defaultsettings.cpp  dummygamedef.h  dummymap.h  emerge.cpp  emerge.h  emerge_internal.h  environment.cpp  environment.h  exceptions.h  face_position_cache.cpp  filesys.cpp  filesys.h  gamedef.h  gameparams.h  get_time.hpp  gettext.cpp  gettext.h  (+103 more)
util/: bump_version.sh  gather_git_credits.py  stress_mapgen.sh  test_error_cases.sh  updatepo.sh  (+1 more)
(+817 files in other folders)
